--- a/hacked/hacked.css
+++ b/hacked/hacked.css
@@ -1,6 +1,10 @@
 body {
     background-image: url(hacked5.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    background-size: 100% 100%; /* Ensure the background covers the entire viewport */
+    background-position: center;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw; /* Ensure the body takes the full width of the viewport */
 }
